# alertstack

./: .env  .env.template  .gitignore  Makefile  README.html  README.markmap.html  README.md  alertstack.io.html  build.sh  docker-compose.yml  pyproject.toml  requirements.txt
alertmanager/: alertmanager.yml
alertmanager/templates/: default.tmpl  pagerDuty.tmpl  pagerDutyExtraGOD.tmpl  slack.tmpl  slackExtraGOD.tmpl
app/: Dockerfile  Makefile  README.markmap.html  README.md  build.sh  generate-cert.sh  go.mod  go.sum  pingpong.go  pingpong.md  pingpong_test.go
app/test/: BGP_down.slack.prom  bgp_neighbors_status.prom  bgp_neighbors_status.slack.prom  bgp_neighbors_status_test.prom  envoy_cx_active.prom  envoy_downstream_rq_xx.prom  envoy_upstream_rq.prom  envoy_upstream_rq.slack.prom  envoy_upstream_rq.urls.prom  examples.sh  front_office.prom  front_office_disk_space.prom  gen_ai.prom  multi_metric.prom  node_directory_size_bytes.page.prom  node_directory_size_bytes.prom  node_directory_size_bytes.slack.prom
grafana/dashboards/alertstack/: alertstack.json
grafana/provisioning/dashboards/: dashboards.yaml
prometheus/: alerts-genai.yml  alerts-genai.yml.tmpl  alerts-mesh-team.yml  alerts-mesh-team.yml.tmpl  prometheus.yml  rules.yml  rules.yml.tmpl  web.config.file
scripts/: bootstrap.sh  deploy.sh  filetree  gen_cert.py  ping_ip  redeploy.sh  s3_bucket_empty.sh  set_prom_host.sh  spellingcheck.py  upload.sh
src/frontend-proxy/: Dockerfile  envoy.tmpl.yaml
terraform/: ebs.tf  ec2.tf  iam.tf  main.tf  outputs.tf  s3.tf  user-data.sh.tpl  variables.tf
