[build-system]
requires = ["setuptools>=72", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "alertstack"
version = "0.1.0"
description = "Alertmanager webhook receiver and Prometheus metrics server with TLS support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "David Kierans", email = "dkierans@gmail.com" }]
keywords = [
    "alertmanager", "prometheus", "metrics", "webhook", "observability",
    "pagerduty", "slack", "alerting",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
]

dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "cryptography>=42.0",
]

[project.scripts]
alertstack = "alertstack:main"

[project.urls]
Homepage = "https://github.com/dkierans/alertstack"
Issues = "https://github.com/dkierans/alertstack/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["alertstack*"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E741"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
